<resources>
    <string name="app_name">GC</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="usernameHint">username</string>
    <string name="passwordHint">password</string>
    <string name="tvapp">移动控制器</string>
    <string name="tvweb">桌面端</string>
    <string name="onlines">在线</string>
    <string name="offlines">未上线</string>
    <string name="goc">进入控制</string>

    <string name="dummy_button">可以开始</string>
    <string name="dummy_content">向右横放\nReady?</string>
    <string name="backButton">后退按钮</string>
    <string name="sButton">减速键</string>
    <string name="wButton">加速键</string>

</resources>
