<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ControlActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="top|end"
        android:background="@drawable/b1b"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/backButton"
        android:visibility="invisible"
        android:enabled="false"/>

    <ImageButton
        android:id="@+id/sButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="top|start"
        android:background="@drawable/b1s"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/sButton"
        android:visibility="invisible"
        android:enabled="false"/>

    <ImageButton
        android:id="@+id/wButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="bottom|start"
        android:background="@drawable/b1w"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/wButton"
        android:visibility="invisible"
        android:enabled="false"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>